--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,20 @@
-APP_NAME="Kumparan-Test"
+APP_NAME="kumparan-backend-test"
 APP_QUOTE="It always seems impossible until it's done"
 APP_PORT=5656
+
+DB_URL =mysql://:@127.0.0.1:3306/
+DB_DIAL_TIMEOUT=2
+DB_READ_TIMEOUT=10
+DB_WRITE_TIMEOUT=10
+DB_CONNECTION=mysql
+DB_MAX_IDLE_CONNS=50
+DB_MAX_OPEN_CONNS=100
+DB_USER=
+DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_NAME=
+DB_PORT=3306
+DB_MAX_LIFETIME_CONN=3600
+
+NEWRELIC_LICENSE=
+NEWRELIC_ON=false
